# atmos

./: .gitignore  MYOBS.txt  README.md  index.html  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
atmos-interface/: vite.config.ts
atmos-server/: MYOBS.txt  requirements.txt
atmos-server/tests/: test_translate_e2e.py  wind.py
examples/v0.1/: ex1-0-1.json  ex1-0-mesh.json  ex1-0.json  ex1-1-isoband-rain-stations.json  ex1-1-isoband-rain.json  ex1-1.json  ex1-2.json  ex1-3.json  ex2-1.json  ex3-1.json  ex4-1.json
public/artifacts/: manifest.json  view1-temp.geojson
public/examples/: ex-wind-1.json  ex1-0-0.json  ex1-0-1.json  ex1-0-isoband-rain-slider.json  ex1-0-isoband-rain.json  ex1-0-isoband.json  ex1-0-isoline.json  ex1-0-mesh-t2m-range.json  ex1-0-mesh-t2mF.json  ex1-0-mesh.json  ex1-0-stations.json  ex1-0-wind.json  ex1-0.json  ex1-1-isoband-rain-sequential.json  ex1-1-isoband-rain-stations.json  ex1-1-isoband-rain.json  ex1-1-isoband-slider.json  ex1-1-mesh-rain.json  ex1-1.json  ex1-2-isoband-rain-slider.json  ex2-0-wind-arrows.json  ex2-0-wind-barbs.json  ex2-0-wind.json  ex3-0-stations-agg.json  ex3-0-stations.json  ex3-1-obs-frcst.json  ex4-0-isoband-rain-mask.json  ex4-3-ens-rain.json  ex4-5-ens-prob.json  ex4-6-ens-qtl.json  paper-sc1-ex1.json  paper-sc2-ex1.json  paper-sc2-ex2.json  paper-sc2-ex3.json  (+4 more)
src/: App.tsx  main.tsx
tests/: conftest.py  relHum.py  tempHrrr.py  test_compile_and_run.py  test_execute_load_geojson.py  test_netcdf_loader.py  test_transform_wind_geojson.py  test_validate_spec.py
(+292 files in other folders)
